--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,66 +1,59 @@
-name: CI Workflow
+name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - unittest_v1
+    branches: jon-test
   pull_request:
-    branches:
-      - unittest_v1
+    branches: jon-test
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
-
     steps:
-      # 1. Checkout the code from the repository
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      # 2. Set up Node.js (version 18.18.2)
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '18.18.2'
-          cache: 'npm'
+          node-version: '18'
 
-      # 3. Cache node_modules to speed up build times
-      - name: Cache node_modules
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      # 4. Install dependencies
       - name: Install dependencies
         run: npm install
 
-      # 5. Run ESLint for code linting
-      - name: Run Lint
-        run: npm run lint
-
-      # 6. Run Prettier to check code formatting
-      - name: Run Prettier
-        run: npm run prettier -- --check
-
-      # 7. Set environment variables from GitHub Secrets
-      - name: Set environment variables
+      - name: Create .env.test file
         run: |
-          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
-          echo "NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> $GITHUB_ENV
-          echo "GITHUB_ID=${{ secrets.GITHUB_ID }}" >> $GITHUB_ENV
-          echo "GITHUB_SECRET=${{ secrets.GITHUB_SECRET }}" >> $GITHUB_ENV
+          echo "DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}" >> .env.test
+          echo "DIRECT_URL=${{ secrets.TEST_DIRECT_URL }}" >> .env.test
 
-      # 8. Run Jest tests (integration tests)
-      - name: Run Jest Integration Tests
-        run: npm run test
+      - name: Run tests
+        run: npm test
+        env:
+          NODE_ENV: test # This tells your app to use .env.test
 
-      # 9. [Optional] If you need code coverage
-      - name: Upload Coverage
-        if: success()
-        uses: actions/upload-artifact@v3
-        with:
-          name: code-coverage
-          path: coverage
+
+  # # deploy:
+  #   needs: test  # Only run deploy if tests pass
+  #   if: github.ref == 'refs/heads/main' # Only deploy on main branch
+  #   runs-on: ubuntu-latest
+  #   environment: production
+
+  #   steps:
+  #     - uses: actions/checkout@v3
+
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: '18'
+
+  #     - name: Install dependencies
+  #       run: npm install
+
+  #     - name: Create .env file
+  #       run: |
+  #         echo "DATABASE_URL=${{ secrets.PROD_DATABASE_URL }}" >> .env
+  #         echo "API_KEY=${{ secrets.PROD_API_KEY }}" >> .env
+
+  #     - name: Deploy
+  #       run: npm run deploy  # Or your deployment command
+  #       env:
+  #         NODE_ENV: production
