--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,51 +17,51 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Install dependencies
-        run: npm install
+      # - name: Install dependencies
+      #   run: npm install
 
-      - name: Create .env.test file
-        run: |
-          echo "DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}" >> .env.test
-          echo "DIRECT_URL=${{ secrets.TEST_DIRECT_URL }}" >> .env.test
+      # - name: Create .env.test file
+      #   run: |
+      #     echo "DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}" >> .env.test
+      #     echo "DIRECT_URL=${{ secrets.TEST_DIRECT_URL }}" >> .env.test
 
-      - name: Set environment variable
-        run: echo "DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}" >> $GITHUB_ENV
+      # - name: Set environment variable
+      #   run: echo "DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}" >> $GITHUB_ENV
 
-      - name: Run tests
-        run: DATABASE_URL=${{ secrets.TEST_DATABASE_URL }} npm test -- --coverage
+      # - name: Run tests
+      #   run: DATABASE_URL=${{ secrets.TEST_DATABASE_URL }} npm test -- --coverage
 
-      # - name: Test and coverage
+      # # - name: Test and coverage
+      # #   env:
+      # #     DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      # # run: npm test -- --coverage
+
+      # # Upload coverage report
+      # - name: Upload Coverage
+      #   if: success()
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: code-coverage
+      #     path: coverage
+
+      # # Download coverage artifact for SonarCloud
+      # - name: Download Coverage Artifact
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: code-coverage
+      #     path: coverage
+
+      # - name: SonarCloud Scan
+      #   uses: SonarSource/sonarcloud-github-action@master
       #   env:
-      #     DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      # run: npm test -- --coverage
-
-      # Upload coverage report
-      - name: Upload Coverage
-        if: success()
-        uses: actions/upload-artifact@v3
-        with:
-          name: code-coverage
-          path: coverage
-
-      # Download coverage artifact for SonarCloud
-      - name: Download Coverage Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: code-coverage
-          path: coverage
-
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=SPMGroup7Key
-            -Dsonar.organization=rayngjx
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
-            -Dsonar.branch.name=main
+      #     SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
+      #     GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+      #   with:
+      #     args: >
+      #       -Dsonar.projectKey=SPMGroup7Key
+      #       -Dsonar.organization=rayngjx
+      #       -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+      #       -Dsonar.branch.name=main
 
       # - name: Get Analysis ID and Check Quality Gate Status
       #   env:
@@ -72,7 +72,7 @@ jobs:
       #     count=0
 
       #     # Fetch the latest analysis ID for the branch
-      #     analysisId=$(curl -s -u $SONAR_TOKEN: "https://sonarcloud.io/api/project_analyses/search?project=SPMGroup7Key&branch=rayTest" | jq -r '.analyses[0].key')
+      #     analysisId=$(curl -s -u $SONAR_TOKEN: "https://sonarcloud.io/api/project_analyses/search?project=SPMGroup7Key&branch=main" | jq -r '.analyses[0].key')
       #     echo "Analysis ID: $analysisId"
 
       #     if [ -z "$analysisId" ] || [ "$analysisId" == "null" ]; then
@@ -110,7 +110,7 @@ jobs:
       #     echo "Quality Gate status did not become available in time."
       #     exit 1
 
-      - name: Check Quality Gate for short live branches
+      - name: Check Quality Gate for branches
         env:
           SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
         run: |
@@ -120,7 +120,7 @@ jobs:
 
           while [ "$count" -lt "$max_retries" ]; do
             # Fetch the Quality Gate status
-            status=$(curl -s -u "$SONAR_TOKEN:" "https://sonarcloud.io/api/qualitygates/project_status?projectKey=SPMGroup7Key&branch=rayTest" | jq -r .projectStatus.status)
+            status=$(curl -s -u "$SONAR_TOKEN:" "https://sonarcloud.io/api/qualitygates/project_status?projectKey=SPMGroup7Key&branch=main" | jq -r .projectStatus.status)
             echo "Attempt $((count+1)): Quality Gate status: $status"
 
             if [ "$status" == "OK" ]; then
