--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,51 +17,51 @@ jobs:
         with:
           fetch-depth: 0
 
-      # - name: Install dependencies
-      #   run: npm install
+      - name: Install dependencies
+        run: npm install
 
-      # - name: Create .env.test file
-      #   run: |
-      #     echo "DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}" >> .env.test
-      #     echo "DIRECT_URL=${{ secrets.TEST_DIRECT_URL }}" >> .env.test
+      - name: Create .env.test file
+        run: |
+          echo "DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}" >> .env.test
+          echo "DIRECT_URL=${{ secrets.TEST_DIRECT_URL }}" >> .env.test
 
-      # - name: Set environment variable
-      #   run: echo "DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}" >> $GITHUB_ENV
+      - name: Set environment variable
+        run: echo "DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}" >> $GITHUB_ENV
 
-      # - name: Run tests
-      #   run: DATABASE_URL=${{ secrets.TEST_DATABASE_URL }} npm test -- --coverage
+      - name: Run tests
+        run: DATABASE_URL=${{ secrets.TEST_DATABASE_URL }} npm test -- --coverage
 
-      # # - name: Test and coverage
-      # #   env:
-      # #     DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      # # run: npm test -- --coverage
-
-      # # Upload coverage report
-      # - name: Upload Coverage
-      #   if: success()
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: code-coverage
-      #     path: coverage
-
-      # # Download coverage artifact for SonarCloud
-      # - name: Download Coverage Artifact
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: code-coverage
-      #     path: coverage
-
-      # - name: SonarCloud Scan
-      #   uses: SonarSource/sonarcloud-github-action@master
+      # - name: Test and coverage
       #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
-      #     GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
-      #   with:
-      #     args: >
-      #       -Dsonar.projectKey=SPMGroup7Key
-      #       -Dsonar.organization=rayngjx
-      #       -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
-      #       -Dsonar.branch.name=main
+      #     DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      # run: npm test -- --coverage
+
+      # Upload coverage report
+      - name: Upload Coverage
+        if: success()
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage
+          path: coverage
+
+      # Download coverage artifact for SonarCloud
+      - name: Download Coverage Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: code-coverage
+          path: coverage
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=SPMGroup7Key
+            -Dsonar.organization=rayngjx
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+            -Dsonar.branch.name=main
 
       # - name: Get Analysis ID and Check Quality Gate Status
       #   env:
